--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,54 @@
+/* Fonts */
+@font-face {
+  font-family: 'Spartan';
+  src: url('../fonts/Spartan/Spartan-Regular.eot');
+  src: url('../fonts/Spartan/Spartan-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Spartan/Spartan-Regular.woff2') format('woff2'),
+    url('../fonts/Spartan/Spartan-Regular.woff') format('woff'),
+    url('../fonts/Spartan/Spartan-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Spartan';
+  src: url('../fonts/Spartan/Spartan-Bold.eot');
+  src: url('../fonts/Spartan/Spartan-Bold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Spartan/Spartan-Bold.woff2') format('woff2'),
+    url('../fonts/Spartan/Spartan-Bold.woff') format('woff'),
+    url('../fonts/Spartan/Spartan-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Spartan';
+  src: url('../fonts/Spartan/Spartan-Medium.eot');
+  src: url('../fonts/Spartan/Spartan-Medium.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Spartan/Spartan-Medium.woff2') format('woff2'),
+    url('../fonts/Spartan/Spartan-Medium.woff') format('woff'),
+    url('../fonts/Spartan/Spartan-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Global */
 html {
   box-sizing: border-box;
   height: 100%;
   scroll-behavior: smooth;
+}
+
+:root {
+  --body-bg: #effafa;
+  --green: #5ca5a5;
+  --light-green: rgba(92, 165, 165, 0.1);
+  --pale-green: #7c8f8f;
+  --black: #2b3939;
+
 }
 
 *,
@@ -16,11 +63,12 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #222;
+  font-family: Spartan, sans-serif;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 24px;
+  background-color: var(--body-bg);
+  color: var(--black);
 }
 
 img {
@@ -28,32 +76,237 @@ img {
   height: auto;
 }
 
+/* BADGE */
+.badge {
+  display: inline-block;
+  text-align: center;
+  padding: 6px 8px 4px;
+  border-radius: 12px;
+  letter-spacing: -0.08px;
+  font-size: 11px;
+  line-height: 14px;
+  text-transform: uppercase;
+}
+
+.badge-green {
+  background-color: var(--green);
+  color: #fff;
+}
+
+.badge-dark {
+  background-color: var(--black);
+  color: #fff;
+}
+
 
 /* CONTAINER */
 
 .container {
   width: 100%;
-  max-width: 1200px;
-  padding-left: 50px;
-  padding-right: 50px;
+  max-width: 1150px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
 }
 
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
 
 /* MAIN CONTENT */
 .main-content {
   flex-grow: 1;
+  padding-top: 76px;
+  padding-bottom: 120px;
 }
+
+.site-header {
+  flex-shrink: 0;
+  position: relative;
+  width: 100%;
+  height: 160px;
+  background-color: var(--green);
+  overflow: hidden;
+}
+
+.header-bg-img1 {
+  position: absolute;
+  left: -140px;
+  top: -576px;
+
+}
+
+.header-bg-img2 {
+  position: absolute;
+  top: -58px;
+  right: -97px;
+}
+
+
+
+/* JOB LISTINGS LIST */
+
+.job-listings-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.job-listings-item {
+  display: flex;
+  align-items: center;
+  padding: 32px 40px 32px 35px;
+  background-color: #fff;
+  border-radius: 5px;
+  border-left: 5px solid transparent;
+  box-shadow: 0px 15px 20px -5px rgba(13, 113, 130, 0.15);
+}
+
+.job-listings-item-featured {
+  border-left-color: var(--green);
+}
+
+.job-listings-item:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.job-listings-logo {
+  width: 88px;
+  height: 88px;
+  flex-shrink: 0;
+  object-fit: cover;
+  margin-right: 24px;
+}
+
+.job-listings-info {
+  flex-grow: 1;
+  margin-right: 24px;
+}
+
+.job-listings-company-badges {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.job-listings-company {
+  margin-right: 16px;
+  color: var(--green);
+  font-size: 14px;
+  line-height: normal;
+}
+
+.job-listings-badges {
+  display: flex;
+  align-items: center;
+}
+
+.job-listings--badge-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.job-listings-position {
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+
+.job-listings-position-link {
+  font-size: 18px;
+  line-height: 24px;
+  text-decoration: none;
+  color: var(--black);
+}
+
+.job-listings-position-link:hover {
+  color: var(--green);
+}
+
+.job-listings-addl {
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  letter-spacing: -0.115px;
+  color: var(--pale-green);
+}
+
+.job-listings-addl-item:not(:last-child) {
+  position: relative;
+  margin-right: 36px;
+}
+
+.job-listings-addl-item:not(:last-child)::after {
+  position: absolute;
+  top: 50%;
+  right: -16px;
+  transform: translateY(-50%);
+  content: "";
+  width: 4px;
+  height: 4px;
+  background-color: #B7C4C4;
+  border-radius: 50%;
+}
+
+.job-listings-tags {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.job-listings-tags-item {
+  border-radius: 4px;
+  background-color: var(--light-green);
+  padding: 4px 8px;
+  color: var(--green);
+  font-size: 13px;
+  letter-spacing: -0.1px;
+  cursor: pointer;
+}
+
+.job-listings-tags-item:hover {
+  background-color: var(--green);
+  color: #fff;
+}
+.job-listings-tags-item:not(:last-child) {
+  margin-right: 16px;
+}
+
+
+
+.tag {}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* RETINA BACKGROUNDS */
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
-only screen and (     -o-min-device-pixel-ratio: 2/1),
-only screen and (        min-device-pixel-ratio: 2),
-only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx) {
-
-}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (min--moz-device-pixel-ratio: 2),
+only screen and (-o-min-device-pixel-ratio: 2/1),
+only screen and (min-device-pixel-ratio: 2),
+only screen and (min-resolution: 192dpi),
+only screen and (min-resolution: 2dppx) {}
