--- a/css/styles.css
+++ b/css/styles.css
@@ -227,6 +227,7 @@ img {
   line-height: 24px;
   text-decoration: none;
   color: var(--black);
+  text-transform: capitalize;
 }
 
 .job-listings-position-link:hover {
